// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`@perch/theme-grid > renders ja + en snapshots > en 1`] = `
"<!doctype html><html lang="en"><head>
<meta charset="utf-8" />
<meta name="viewport" content="width=device-width, initial-scale=1" />
<title>grid sample</title>
<meta name="generator" content="@perch/themes:grid" />
<link rel="stylesheet" href="./style.css" />
<meta property="og:title" content="grid sample" />
<meta property="og:type" content="website" />
<meta name="twitter:card" content="summary" />
</head><body class="bg-white text-neutral-900">
<main class="max-w-5xl mx-auto px-6 py-12 font-sans antialiased">
<header class="mb-8 text-center">
<h1 class="text-3xl font-bold">grid sample</h1>
</header>

<section><h2 class="font-semibold mt-6 mb-2">Latest posts</h2>
<ul class="grid grid-cols-1 md:grid-cols-3 gap-6 mt-6"><li class="border rounded-md p-4">
<a href="https://example.com/p/1" class="font-medium hover:underline" rel="noopener" target="_blank">one</a>
<div class="text-xs opacity-60">4/30/2026</div>
</li></ul></section>
</main>
</body></html>"
`;

exports[`@perch/theme-grid > renders ja + en snapshots > ja 1`] = `
"<!doctype html><html lang="ja"><head>
<meta charset="utf-8" />
<meta name="viewport" content="width=device-width, initial-scale=1" />
<title>grid sample</title>
<meta name="generator" content="@perch/themes:grid" />
<link rel="stylesheet" href="./style.css" />
<meta property="og:title" content="grid sample" />
<meta property="og:type" content="website" />
<meta name="twitter:card" content="summary" />
</head><body class="bg-white text-neutral-900">
<main class="max-w-5xl mx-auto px-6 py-12 font-sans antialiased">
<header class="mb-8 text-center">
<h1 class="text-3xl font-bold">grid sample</h1>
</header>

<section><h2 class="font-semibold mt-6 mb-2">最新の発信</h2>
<ul class="grid grid-cols-1 md:grid-cols-3 gap-6 mt-6"><li class="border rounded-md p-4">
<a href="https://example.com/p/1" class="font-medium hover:underline" rel="noopener" target="_blank">one</a>
<div class="text-xs opacity-60">2026/4/30</div>
</li></ul></section>
</main>
</body></html>"
`;
